--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>java</groupId>
+    <groupId>org.webbitserver</groupId>
     <artifactId>webbit</artifactId>
     <name>${artifactId}</name>
     <version>0.1</version>
