--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
@@ -6,8 +5,28 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.webbitserver</groupId>
     <artifactId>webbit</artifactId>
-    <name>${artifactId}</name>
-    <version>0.1</version>
+    <name>${project.artifactId}</name>
+    <description>A Java event based WebSocket and HTTP server</description>
+    <url>http://webbitserver.org/</url>
+    <version>0.1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <parent>
+      <groupId>org.sonatype.oss</groupId>
+      <artifactId>oss-parent</artifactId>
+      <version>6</version>
+    </parent>
+    <licenses>
+      <license>
+        <name>The Apache Software License, Version 2.0</name>
+        <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        <distribution>repo</distribution>
+      </license>
+    </licenses>
+    <scm>
+      <connection>scm:git:git://github.com/joewalnes/webbit.git</connection>
+      <developerConnection>scm:git:git@github.com:aslakhellesoy/webbit.git</developerConnection>
+      <url>git://github.com/joewalnes/webbit.git</url>
+    </scm>
     <repositories>
         <repository>
             <id>repository.jboss.org</id>
@@ -52,6 +71,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
