--- a/pom.xml
+++ b/pom.xml
@@ -1,31 +1,28 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.webbitserver</groupId>
     <artifactId>webbit</artifactId>
     <name>${project.artifactId}</name>
     <description>A Java event based WebSocket and HTTP server</description>
     <url>http://webbitserver.org/</url>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>jar</packaging>
     <parent>
-      <groupId>org.sonatype.oss</groupId>
-      <artifactId>oss-parent</artifactId>
-      <version>6</version>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>6</version>
     </parent>
     <licenses>
-      <license>
-        <name>BSD License</name>
-        <url>http://www.opensource.org/licenses/bsd-license</url>
-        <distribution>repo</distribution>
-      </license>
+        <license>
+            <name>BSD License</name>
+            <url>http://www.opensource.org/licenses/bsd-license</url>
+            <distribution>repo</distribution>
+          </license>
     </licenses>
     <scm>
-      <connection>scm:git:git://github.com/joewalnes/webbit.git</connection>
-      <developerConnection>scm:git:git@github.com:aslakhellesoy/webbit.git</developerConnection>
-      <url>git://github.com/joewalnes/webbit.git</url>
+        <connection>scm:git:git://github.com/joewalnes/webbit.git</connection>
+        <developerConnection>scm:git:git@github.com:aslakhellesoy/webbit.git</developerConnection>
+        <url>git://github.com/joewalnes/webbit.git</url>
     </scm>
     <repositories>
         <repository>
@@ -67,6 +64,15 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
         </dependency>
     </dependencies>
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>1.1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -75,6 +81,14 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.1</version>
+                <configuration>
+                    <useAgent>true</useAgent>
                 </configuration>
             </plugin>
         </plugins>
