Skip maven-gpg-plugin for builds
For most contributors looking to build the project locally, this will trip them
up. Better to set a flag for those who have the correct GPG credentials
to enable this instead.

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,7 @@
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.1</version>
                 <configuration>
+                    <skip>true</skip>
                     <useAgent>true</useAgent>
                 </configuration>
                 <executions>
