--- a/pom.xml
+++ b/pom.xml
@@ -108,13 +108,12 @@
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.1</version>
                 <configuration>
-                    <skip>true</skip>
                     <useAgent>true</useAgent>
                 </configuration>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
-                        <phase>verify</phase>
+                        <phase>deploy</phase>
                         <goals>
                             <goal>sign</goal>
                         </goals>
