--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,9 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
                         <version>1.1</version>
+                        <configuration>
+                            <useAgent>true</useAgent>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
