--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <name>${project.artifactId}</name>
     <description>A Java event based WebSocket and HTTP server</description>
     <url>http://webbitserver.org/</url>
-    <version>0.2.16</version>
+    <version>0.2.17-SNAPSHOT</version>
     <packaging>jar</packaging>
     <parent>
         <groupId>org.sonatype.oss</groupId>
