--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,9 @@
     </repositories>
     <dependencies>
         <dependency>
-            <groupId>org.jboss.netty</groupId>
+            <groupId>io.netty</groupId>
             <artifactId>netty</artifactId>
-            <version>3.2.7.Final</version>
+            <version>3.5.1.Final</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
