--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,14 @@
             <artifactId>gson</artifactId>
             <version>2.2.4</version>
             <scope>test</scope>
+    	</dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpasyncclient</artifactId>
+            <version>4.0.1</version>
+            <scope>test</scope>
         </dependency>
+
     </dependencies>
     <build>
         <plugins>
